Bug 44984 - FILEOPEN: Imported RTF does not show checkbox input fields
Summary: FILEOPEN: Imported RTF does not show checkbox input fields
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.0 RC1
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:4.4.0
Keywords: filter:rtf
Depends on:
Blocks: RTF
  Show dependency treegraph
 
Reported: 2012-01-20 05:00 UTC by Tobias Burnus
Modified: 2015-12-17 05:47 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Anonymized document from URL (66.80 KB, application/rtf)
2012-11-21 14:43 UTC, Urmas
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tobias Burnus 2012-01-20 05:00:50 UTC
The RTF file http://www.dfg.de/formulare/10_03/10_03_rtf.rtf contains in the field "Familienstand" the check boxes:
"[ ] ledig  [ ] verheiratet  [ ] verwitwet  [ ] geschieden"

However, in LO 3.5.0 RC1 the check boxes are not shown.
Comment 1 s-joyemusequna 2012-01-20 11:11:21 UTC
Confirmed with LibO 3.4 Beta3 and Windows Vista 64.
Comment 2 Jean-Baptiste Faure 2012-03-20 22:59:44 UTC
WordPad under Ubuntu/Wine does not show checkboxes too.
The offendig text fragment seems to be in Helvetica font which is a proprietary font not installed by default.
Is it possible to attach a version of the bugdoc with only standard font like Arial and Times New Roman ? That will allow us to know if the problem is in the used font remplacement or is a generic problem with checkboxes.

Best regards. JBF
Comment 3 Urmas 2012-11-21 14:43:57 UTC
Created attachment 70372 [details]
Anonymized document from URL

Confirmed in 4.0-master.
Comment 4 Alexandr 2014-08-07 14:22:49 UTC
Reproducible with LibreOffice 4.2.5 and 4.3.0 on Debian. Another example of rtf with checkboxes is bug 50821 attachment 62702 [details].
Comment 5 Commit Notification 2014-09-12 08:22:37 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=52803dca4714494f58034c8636cb2d71ad32c2d0

fdo#44984 RTF import: handle form fields inside tables



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Miklos Vajna 2014-09-12 08:25:21 UTC
This was only an issue when the checkbox was inside something buffered, e.g. table.
Comment 7 Robinson Tryon (qubit) 2015-12-17 05:47:55 UTC
Migrating Whiteboard tags to Keywords: (filter:rtf)
[NinjaEdit]