fdo#44984 RTF import: handle form fields inside tables

Change-Id: I84b3d5186e99b8313cfb32398869de028a267b49